--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 
 env:
-  PUBLISH_DIR: ./myapp
+  PUBLISH_DIR: C:\actions-runner\_work\gitPipeline\gitPipeline\myapp
   WEBSITE_DIR: E:\testSite\gitPipeline\bin\Debug\net6.0\publish\wwwroot
 
 
