--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,17 @@
 name: Build and deploy .NET Core app to IIS
 
 on:
-  issues:
+  pull_request:
+    types:
+      - closed
     branches:
-      - master
+      - main
 
 env:
   PUBLISH_DIR: C:\actions-runner\_work\gitPipeline\gitPipeline\myapp
   WEBSITE_DIR: E:\testSite\gitPipeline\bin\Debug\net6.0\publish
   IIS_SITE_NAME: gitPipeline
+  IIS_PAGEDOWN_NAME: pagedown
 
 jobs:
   build-and-deploy:
@@ -32,6 +35,16 @@ jobs:
           key: ${{ runner.os }}-dotnet-${{ hashFiles('**/MyProject.csproj') }}
           restore-keys: ${{ runner.os }}-dotnet-
 
+      # Stop IIS site [WEBSITE]
+      - name: Stop IIS site
+        shell: cmd
+        run: C:\Windows\System32\inetsrv\appcmd stop site /site.name:"${{ env.IIS_SITE_NAME }}"
+
+      # Start IIS site [IIS_PAGEDOWN_NAME]
+      - name: Start IIS site
+        shell: cmd
+        run: C:\Windows\System32\inetsrv\appcmd start site /site.name:"${{ env.IIS_PAGEDOWN_NAME }}"
+        
       # Build with dotnet
       - name: Build with dotnet
         shell: cmd
@@ -42,17 +55,17 @@ jobs:
         shell: cmd
         run: dotnet publish -c Release -o ${{ env.PUBLISH_DIR }}
 
-      # Stop IIS site
-      - name: Stop IIS site
-        shell: cmd
-        run: C:\Windows\System32\inetsrv\appcmd stop site /site.name:"${{ env.IIS_SITE_NAME }}"
-
       # Copy files to website directory
       - name: Copy files to website directory
         shell: cmd
         run: xcopy /s /y ${{ env.PUBLISH_DIR }}\* ${{ env.WEBSITE_DIR }}
+        
+      # Stop IIS site [WEBSITE]
+      - name: Stop IIS site
+        shell: cmd
+        run: C:\Windows\System32\inetsrv\appcmd stop site /site.name:"${{ env.IIS_PAGEDOWN_NAME }}"
 
-      # Start IIS site
+      # Start IIS site [WEBSITE]
       - name: Start IIS site
         shell: cmd
         run: C:\Windows\System32\inetsrv\appcmd start site /site.name:"${{ env.IIS_SITE_NAME }}"
