--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   build-and-deploy:
     runs-on: self-hosted
-    if: ${{ github.ref == 'refs/heads/dev' && github.event.pull_request.merged == true }}
+    if: ${{ github.ref == 'refs/heads/dev' && github.event.pull_request.merged }}
 
     steps:
       # Checkout code
