--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
       # Copy files to website directory
       - name: Copy files to website directory
         shell: cmd
-        run: xcopy /s /y ${{ env.PUBLISH_DIR }}\* ${{ env.WEBSITE_DIR }}
+        run: xcopy /s /y /f ${{ env.PUBLISH_DIR }}\* ${{ env.WEBSITE_DIR }}
         
       # Stop IIS site [WEBSITE]
       - name: Stop IIS site
