--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,12 +24,15 @@ jobs:
     steps:
       # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
-        shell: bash
+        shell: cmd
         run: |
-          maintenance_time=$(curl -s http://localhost:8081/maintenance)
-          if [ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]; then
-            sleep $(( $(date -d "$maintenance_time" +%s) - $(date +%s) ))
-          fi
+          for /f %%i in ('curl -s http://localhost:8081/maintenance') do set maintenance_time=%%i
+          for /f %%i in ('powershell -Command "(Get-Date).ToUniversalTime().ToString('yyyy-MM-dd HH:mm:ss')"') do set current_time=%%i
+          for /f %%i in ('powershell -Command "(Get-Date '%maintenance_time%').ToUniversalTime().ToString('yyyy-MM-dd HH:mm:ss')"') do set maintenance_datetime=%%i
+          if "%current_time%" LSS "%maintenance_datetime%" (
+            powershell -Command "$sleep_duration = [DateTime]::ParseExact('%maintenance_datetime%', 'yyyy-MM-dd HH:mm:ss', $null) - [DateTime]::ParseExact('%current_time%', 'yyyy-MM-dd HH:mm:ss', $null); Start-Sleep -Seconds $sleep_duration.TotalSeconds"
+          )
+    
   
       # Checkout code
       - name: Checkout code
