--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,7 @@ jobs:
         run: |
           for /f %%i in ('curl -s http://localhost:8081/maintenance') do set maintenance_time=%%i
           for /f %%i in ('powershell -Command "(Get-Date).ToUniversalTime().ToString('yyyy-MM-dd HH:mm:ss')"') do set current_time=%%i
-          for /f %%i in ('powershell -Command "(Get-Date '%maintenance_time%').ToUniversalTime().ToString('yyyy-MM-dd HH:mm:ss')"') do set maintenance_datetime=%%i
-          if "%current_time%" GTR "%maintenance_datetime%" (
-            powershell -Command "$sleep_duration = [DateTime]::ParseExact('%maintenance_datetime%', 'yyyy-MM-dd HH:mm:ss', $null) - [DateTime]::ParseExact('%current_time%', 'yyyy-MM-dd HH:mm:ss', $null); Start-Sleep -Seconds $sleep_duration.TotalSeconds"
-          )
+          powershell -Command "$maintenance_datetime = Get-Date -Date '%maintenance_time%' -Format 'yyyy-MM-dd HH:mm:ss'; $current_datetime = Get-Date -Date '%current_time%' -Format 'yyyy-MM-dd HH:mm:ss'; if ($current_datetime -lt $maintenance_datetime) { $sleep_duration = [Math]::Ceiling(($maintenance_datetime - $current_datetime).TotalSeconds); Start-Sleep -Seconds $sleep_duration; }"
           echo "Maintenance time reached."
 
       # Checkout code
