--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,14 @@ jobs:
       # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         id: maintenance-check
-        shell: pwsh
+        shell: cmd
         run: |
-          $maintenance_time = Invoke-RestMethod -Uri 'http://localhost:8081/maintenance'
-          $current_time = Get-Date -Format 'yyyy-MM-dd HH:mm:ss'
-          if ($current_time -lt $maintenance_time) {
-            $sleep_duration = [DateTime]::ParseExact($maintenance_time, 'yyyy-MM-dd HH:mm:ss', $null) - [DateTime]::UtcNow
-            Start-Sleep -Seconds $sleep_duration.TotalSeconds
-          }
-          Write-Host 'Maintenance time reached.'
+          for /f %%i in ('curl -s http://localhost:8081/maintenance') do set maintenance_time=%%i
+          for /f %%i in ('powershell -Command "Get-Date -Format 'yyyy-MM-dd HH:mm:ss'"') do set current_time=%%i
+          if "%current_time%" LSS "%maintenance_time%" (
+            powershell -Command "$sleep_duration = [DateTime]::ParseExact('%maintenance_time%', 'yyyy-MM-dd HH:mm:ss', $null) - [DateTime]::ParseExact('%current_time%', 'yyyy-MM-dd HH:mm:ss', $null); Start-Sleep -Seconds $sleep_duration.TotalSeconds"
+          )
+          echo "Maintenance time reached."
     
           
 
