--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,17 +22,16 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # Check if it is time to perform the maintenance
+  # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         id: maintenance-check
-        shell: pwsh
+        shell: cmd
         run: |
-          $maintenance_time = curl -s http://localhost:8081/maintenance
-          $current_time = Get-Date -Format 'yyyy-MM-dd HH:mm:ss'
-          while ($maintenance_time -le $current_time)
-          {
-            Start-Sleep -Seconds 1
-          }
+          for /f "delims=" %%i in ('curl -s http://localhost:8081/maintenance') do set maintenance_time=%%i
+          for /f "delims=" %%i in ('wmic os get localdatetime') do set current_time=%%i
+          while "%maintenance_time%" le "%current_time%" do (
+              timeout /t 1
+          )
           echo "Maintenance time reached."
     
           
