--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,11 @@ jobs:
         run: |
           for /f "delims=" %%i in ('curl -s http://localhost:8081/maintenance') do set maintenance_time=%%i
           for /f "delims=" %%i in ('wmic os get localdatetime') do set current_time=%%i
-          while "%maintenance_time%" le "%current_time%" do (
-              timeout /t 1
+          for /l %%j in (1,1,10) do (
+            if "%maintenance_time%" le "%current_time%" (
+              break
+            )
+            timeout /t 1
           )
           echo "Maintenance time reached."
     
