--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
         id: maintenance-check
         shell: cmd
         run: |
-          while read -r maintenance_time; do
+          for maintenance_time in $(curl -s http://localhost:8081/maintenance); do
             current_time=$(wmic os get localdatetime)
             if [[ "$maintenance_time" <= "$current_time" ]]; then
               break
             fi
             timeout /t 1
-          done < <(curl -s http://localhost:8081/maintenance)
+          done
           echo "Maintenance time reached."
     
           
