--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,22 +22,14 @@ jobs:
     runs-on: self-hosted
 
     steps:
-  # Check if it is time to perform the maintenances
+      # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
-        id: maintenance-check
-        shell: cmd
         run: |
-          for maintenance_time in $(curl -s http://localhost:8081/maintenance); do
-            current_time=$(wmic os get localdatetime)
-            if [[ "$maintenance_time" <= "$current_time" ]]; then
-              break
-            fi
-            timeout /t 1
-          done
-          echo "Maintenance time reached."
-    
+          maintenance_time=$(curl -s http://localhost:8081/maintenance)
+          if [ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]; then
+            sleep $(( $(date -d "$maintenance_time" +%s) - $(date +%s) ))
+          fi
           
-
       # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
