--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Check maintenance schedule
         run: |
           maintenance_time=$(curl -s http://localhost:8081/maintenance)
-          if [ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]; then
+          if ([ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]) {
             sleep $(( $(date -d "$maintenance_time" +%s) - $(date +%s) ))
-          fi
+          }
           
       # Checkout code
       - name: Checkout code
