--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,13 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # Check if it is time to perform the maintenances
+      # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         run: |
           maintenance_time=$(curl -s http://localhost:8081/maintenance)
-          if ([ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]) {
+          if [ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]; then
             sleep $(( $(date -d "$maintenance_time" +%s) - $(date +%s) ))
-          }
+          fi
           
       # Checkout code
       - name: Checkout code
