--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,15 @@ jobs:
       # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         run: |
-          maintenance_time=$(curl -s http://localhost:8081/maintenance)
-          if [ "$(date +%s)" -lt "$(date -d "$maintenance_time" +%s)" ]; then
-            sleep $(( $(date -d "$maintenance_time" +%s) - $(date +%s) ))
-          fi
+          $maintenanceTime = Invoke-WebRequest -Uri "http://localhost:8081/maintenance" | Select-Object -ExpandProperty Content
+          $maintenanceDateTime = Get-Date $maintenanceTime -Format "yyyy-MM-dd HH:mm:ss"
+          $currentTime = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
+          
+          if ($currentTime -lt $maintenanceDateTime) {
+            $sleepTime = New-TimeSpan -Start $currentTime -End $maintenanceDateTime
+            Start-Sleep -Seconds $sleepTime.TotalSeconds
+          }
+
           
       # Checkout code
       - name: Checkout code
