--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         run: |
-          $maintenanceTime = Invoke-WebRequest -Uri "http://localhost:8081/maintenance" | Select-Object -ExpandProperty Content
+          $maintenanceTime = Invoke-WebRequest -Uri "http://localhost:8081/maintenance" -UseBasicParsing | Select-Object -ExpandProperty Content
           $maintenanceDateTime = Get-Date $maintenanceTime -Format "yyyy-MM-dd HH:mm:ss"
           $currentTime = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
           
@@ -33,6 +33,7 @@ jobs:
             $sleepTime = New-TimeSpan -Start $currentTime -End $maintenanceDateTime
             Start-Sleep -Seconds $sleepTime.TotalSeconds
           }
+
 
           
       # Checkout code
