new update to Yaml 7

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,18 +25,13 @@ jobs:
       # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
         run: |
-          $maintenanceTime = (Invoke-WebRequest -Uri "http://localhost:8081/maintenance" -UseBasicParsing).Content
-          Write-Host "Maintenance Time: $maintenanceTime"
-          $maintenanceDateTime = [DateTime]::ParseExact($maintenanceTime, "yyyy-MM-dd HH:mm:ss", $null)
-          $currentTime = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
-          
-          if ($currentTime -lt $maintenanceDateTime) {
-            $sleepTime = $maintenanceDateTime - $currentTime
-            Start-Sleep -Seconds $sleepTime.TotalSeconds
-          }
-        
-
-
+          maintenance_time=$(curl -s http://localhost:8081/maintenance)
+          echo "Maintenance time: $maintenance_time"
+          current_time=$(date +%s)
+          maintenance_time_unix=$(date -d "$maintenance_time" +%s)
+          if [ $current_time -lt $maintenance_time_unix ]; then
+            sleep $((maintenance_time_unix - current_time))
+          fi
       # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
