--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,21 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # Check if it is time to perform the maintenances
+      # Check if it is time to perform the maintenance
       - name: Check maintenance schedule
+        id: maintenance
         run: |
-          $maintenance_time = (Invoke-WebRequest -Uri 'https://localhost:7133/maintenance' -SkipCertificateCheck).Content
-          $current_time = [Math]::Round((New-TimeSpan -Start (Get-Date -Year 1970 -Month 1 -Day 1 -Hour 0 -Minute 0 -Second 0 -Millisecond 0) -End (Get-Date)).TotalSeconds)
-          $schedule_time = [Math]::Round((Get-Date -Date $maintenance_time).ToUniversalTime().Subtract((Get-Date -Year 1970 -Month 1 -Day 1 -Hour 0 -Minute 0 -Second 0 -Millisecond 0)).TotalSeconds)
-          $sleep_duration = $schedule_time - $current_time
-          if ($sleep_duration -gt 0) {
-            Start-Sleep -Seconds $sleep_duration
-          }
+          maintenance_time=$(curl -s https://localhost:7133/maintenance)
+          echo "::set-output name=maintenance_time::$maintenance_time"
+
+      - name: Check if it's the right time for maintenance
+        run: |
+          current_time=$(date +"%Y-%m-%d %H:%M:%S")
+          if [[ "$current_time" == "${{ steps.maintenance.outputs.maintenance_time }}" ]]; then
+            echo "It is the right time for maintenance."
+          else
+            echo "It is not the right time for maintenance."
+          fi
 
       # Checkout code
       - name: Checkout code
