--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,14 @@ jobs:
           $maintenanceUrl = 'http://localhost:8089/maintenance'
           $scheduledTime = (Invoke-RestMethod -Uri $maintenanceUrl).Trim()
           $currentTime = Get-Date
-          
+
           if ($scheduledTime -ne $null -and $scheduledTime -gt $currentTime) {
-            $timeDifference = $scheduledTime - $currentTime
+            $scheduledDateTime = [DateTime]::ParseExact($scheduledTime, 'yyyy-MM-dd HH:mm:ss', $null)
+            $timeDifference = $scheduledDateTime - $currentTime
             Write-Host "Maintenance scheduled in $timeDifference"
             Start-Sleep -Seconds $timeDifference.TotalSeconds
           }
+
 
       # Checkout code
       - name: Checkout code
